--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>"my first HTML page"</title>
 </head>
 <body>
- 
+ <h1>Name -Shubham jaiswal</h1>
+ <h1>My father name-Dayashankar jaiswal</h1>
+ <h1>My mother name-Seema devi</h1>
 </body>
 </html>
