--- a/GALLERY PAGE/Image.html
+++ b/GALLERY PAGE/Image.html
@@ -18,5 +18,6 @@ a youtube video embed -->
  <body>
   <h2>3 images in gallery page</h2>
   <img src="dog.jpeg" alt="dog image" height="400" width="300">  
+  <img src="https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg" alt="cat image"> height="400" width="300">
  </body>
  </html>
