--- a/GALLERY PAGE/Image.html
+++ b/GALLERY PAGE/Image.html
@@ -18,6 +18,22 @@ a youtube video embed -->
  <body>
   <h2>3 images in gallery page</h2>
   <img src="dog.jpeg" alt="dog image" height="400" width="300">  
-  <img src="https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg" alt="cat image"> height="400" width="300">
+  <img src="https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg" alt="cat image" height="400" width="300">
+  <img src="https://media.istockphoto.com/id/523243976/photo/red-horse-run.jpg?s=612x612&w=0&k=20&c=a2pNt8VWZKPsk4v0oWgG2qxcZpa15gOdedg-4hsZ9eQ=" alt="horse image" height="400" width="300">
+  <h2>audio file in gallery page
+  </h2>
+  <audio controls>
+    <source src="sample audio.mp3" type="audio/mpeg">
+    your brouser does not support the audio element.
+    
+  </audio>
+  <h2>video file in gallery page</h2>
+  <video width="320" height="240"controls>
+    <source src="sample video.mp4" type="video/mp4">
+    your browser does not support the video tag.
+  
+  </video>
+  <h2>a youtube video</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/F_8Gy8T-PvY?si=XSM6hfK1vZL11MgC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  </body>
  </html>
