--- a/GALLERY PAGE/Image.html
+++ b/GALLERY PAGE/Image.html
@@ -30,7 +30,7 @@ a youtube video embed -->
   <h2>video file in gallery page</h2>
   <video width="320" height="240"controls>
     <source src="sample video.mp4" type="video/mp4">
-    your browser does not support the video tag.
+    your browser does not support the video tag
   
   </video>
   <h2>a youtube video</h2>
