--- a/External css/index.html
+++ b/External css/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my first heading</h1>
-    <p>this is my first paragraph</p>
+    <h1 class="heading">this is my first heading</h1>
+    <p class="heading">this is my first paragraph</p>
     
 </body>
 </html>
