--- a/External css/index.html
+++ b/External css/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>  css level 1 </title>
+    
 </head>
 <body>
-    <h1 class="heading">this is my first heading</h1>
-    <p class="heading">this is my first paragraph</p>
     
+<div id="box">
+    this is my first heading
+</div>
+<h1>heading 1</h1>
+<h2>heading 2</h2>
+<h3>heading 3</h3>
 </body>
 </html>
