--- a/External css/index.html
+++ b/External css/index.html
@@ -12,7 +12,7 @@
 
 <div class="box">
     
-    <img src="shubham-css.jpg " alt="">
+    <img src="shubham-css.jpg " alt=" t shirt img">
     <h2>stylish T-Shirt</h2>
     <p>A comfortable cotton T-shirt perfect for casual wear</p>
     <h2 class="heading">price: ₹499</h2>
