--- a/CSS beg to adv/Experiment 7/menu.html
+++ b/CSS beg to adv/Experiment 7/menu.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 align="center"> navigation menu</h1>
+    <h1 align="center"> Navigation menu</h1>
     <h2>Block Example</h2>
     <div class="block-menu">
         <a href="#"> Home</a>
