--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="experiment-8.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,7 +11,7 @@
         <div class="sinfo">
         
             <div class="shortn">
-                <h2>JK</h2>
+                <h2></h2>
             </div>
                 <h2 class="headings">Jeet Kumar</h2>
                 <p class="para">B.Tech-CSE</p>
