--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -11,7 +11,7 @@
     <h1>Best Selling Items   
     </h1>
     <div id="container"><div class="items">
-            <img src="exp-9 " alt="earbuds image" class="img1">
+            <img src="exp-9 img3.jpg" alt="earbuds image" class="img1">
 
 
         
