--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -13,3 +13,6 @@
     <div id="container">
         <div class="items">
             <img src="exp-9 img3.jpg" alt="laptop img">
+            <h2 class="heading">HP 255 G10 Laptop(16GB
+                RAM,512GB SSD,Ryzen 3)
+            </h2>
