--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -16,3 +16,5 @@
             <h2 class="heading">HP 255 G10 Laptop(16GB
                 RAM,512GB SSD,Ryzen 3)
             </h2>
+            <p>A fast and reliable laptop ideal for daily work, browsing, and multitasking.</p>
+            <h1 class="heading1">₹999</h1>
