--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -18,3 +18,4 @@
             </h2>
             <p>A fast and reliable laptop ideal for daily work, browsing, and multitasking.</p>
             <h1 class="heading1">₹999</h1>
+            <button class="button"> Buy Now</button>
