--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -20,3 +20,29 @@
             <h2 class="heading1">₹999</h2>
             <button class="button"> Buy Now</button>
             </div>
+            <div class="items">
+            <img src="exp-9 img2.jpg" alt="mobile img">
+            <h2 class="heading">Apple iphone 15(128GB)-Green
+            </h2>
+            <p>Experience smooth performance,stunning photos, and an advanced A16 chip</p>
+            <h2 class="heading1">₹1499</h2>
+            <button class="button"> Buy Now</button>
+        </div>
+        
+        <div class="items">
+            <img src="exp-9 img4.jpg" alt="Microwave img">
+            <h2 class="heading">Apple iphone 15(128GB)-Green
+            </h2>
+            <p>Perfect for banking grilling, and quick heating with a large 28L capacity</p>
+            <h2 class="heading1">₹799</h2>
+            <button class="button"> Buy Now</button>
+        </div>
+        
+ <div class="items">
+            <img src="exp-9 img1.jpg" alt="earbuds img">
+            <h2 class="heading">boAt Nirvana Zenith Pro (2025)
+            </h2>
+            <p>Premium wireless earbuds with clear sound and long-lasting battery life</p>
+            <h2 class="heading1">₹1299</h2>
+            <button class="button"> Buy Now</button>
+        </div>
