--- a/exp 1.html
+++ b/exp 1.html
@@ -30,9 +30,9 @@
         <ul> 
             <h2>
            <li> C </li> 
-           <li> C+ </li>
+           <li> C++ </li>
            <li> Java </li>
-           <li> Python </li>
+           <li> Pytho </li>
            <li> JavaScript </li>
         </ul>
         <h1><b>Key Terms(Decription List)</b></h1>
