--- a/exp 1.html
+++ b/exp 1.html
@@ -32,8 +32,8 @@
            <li> C </li> 
            <li> C++ </li>
            <li> Java </li>
-           <li> Pytho </li>
-           <li> JavaScript </li>
+           <li> Python </li>
+           <li> JavaScrip </li>
         </ul>
         <h1><b>Key Terms(Decription List)</b></h1>
         <dl>
