--- a/exp 1.html
+++ b/exp 1.html
@@ -33,9 +33,9 @@
            <li> C++ </li>
            <li> Java </li>
            <li> Python </li>
-           <li> JavaScrip </li>
+           <li> JavaScript </li>
         </ul>
-        <h1><b>Key Terms(Decription List)</b></h1>
+        <h1><b>Ke Terms(Decription List)</b></h1>
         <dl>
             <h2> <b> <dt>AI</dt>
           <dd>-Artificial Intelligence,the study of intelligent machines</dd>
