--- a/exp 1.html
+++ b/exp 1.html
@@ -35,10 +35,10 @@
            <li> Python </li>
            <li> JavaScript </li>
         </ul>
-        <h1><b>Ke Terms(Decription List)</b></h1>
+        <h1><b>Key Terms(Decription List)</b></h1>
         <dl>
             <h2> <b> <dt>AI</dt>
-          <dd>-Artificial Intelligence,the study of intelligent machines</dd>
+          <dd>-Atificial Intelligence,the study of intelligent machines</dd>
           <dt>DBMS</dt>
           <dd>-Database Management System, software to handle database </dd>
           <dt>OS</dt>
