--- a/exp 1.html
+++ b/exp 1.html
@@ -38,7 +38,7 @@
         <h1><b>Key Terms(Decription List)</b></h1>
         <dl>
             <h2> <b> <dt>AI</dt>
-          <dd>-Artificial Itelligence,the study of intelligent machines</dd>
+          <dd>-Artificial Intelligence,th study of intelligent machines</dd>
           <dt>DBMS</dt>
           <dd>-Database Management System, software to handle database </dd>
           <dt>OS</dt>
