--- a/exp 1.html
+++ b/exp 1.html
@@ -38,11 +38,11 @@
         <h1><b>Key Terms(Decription List)</b></h1>
         <dl>
             <h2> <b> <dt>AI</dt>
-          <dd>-Artificial Intelligence,th study of intelligent machines</dd>
+          <dd>-Artificial Intelligence,the study of intelligent machines</dd>
           <dt>DBMS</dt>
           <dd>-Database Management System, software to handle database </dd>
           <dt>OS</dt>
-          <dd>-Operating System,software managing hardware resourses </dd>
+          <dd>-Operating System,software manaing hardware resourses </dd>
           </dl></b></h2>
 
         <h1>Elective Subjects (Nested List)</b></h1>
