--- a/exp 1.html
+++ b/exp 1.html
@@ -42,7 +42,7 @@
           <dt>DBMS</dt>
           <dd>-Database Management System, software to handle database </dd>
           <dt>OS</dt>
-          <dd>-Operating System,software manaing hardware resourses </dd>
+          <dd>-Operating System,software managing hardware resourse </dd>
           </dl></b></h2>
 
         <h1>Elective Subjects (Nested List)</b></h1>
