--- a/exp 1.html
+++ b/exp 1.html
@@ -45,7 +45,7 @@
           <dd>-Operating System,software managing hardware resourse </dd>
           </dl></b></h2>
 
-        <h1>lective Subjects (Nested List)</b></h1>
+        <h1>Elective Subjects (Nested List)</b></h1>
         <h2>
             <ul><li>AI Intelligence</li></ul>
             <ol><li>Machine Lerning</li>
