--- a/exp 1.html
+++ b/exp 1.html
@@ -47,7 +47,7 @@
 
         <h1>Elective Subjects (Nested List)</b></h1>
         <h2>
-            <ul><li>AI Intelligence</li></ul>
+            <ul><li> Intelligence</li></ul>
             <ol><li>Machine Lerning</li>
                 <li>Deep Learning</li></ol>
                 <ul><li>Data Science</li></ul>
