--- a/exp 1.html
+++ b/exp 1.html
@@ -48,7 +48,7 @@
         <h1>Elective Subjects (Nested List)</b></h1>
         <h2>
             <ul><li> Intelligence</li></ul>
-            <ol><li>Machine Lerning</li>
+            <ol><li> AI Machine Lerning</li>
                 <li>Deep Learning</li></ol>
                 <ul><li>Data Science</li></ul>
                 <ol><li>Statics</li>
