--- a/exp 1.html
+++ b/exp 1.html
@@ -52,7 +52,7 @@
                 <li>Deep Learning</li></ol>
                 <ul><li>Data Science</li></ul>
                 <ol><li>Statics</li>
-                    <li>Data Visualization</li></ol>
+                    <li>Data isualization</li></ol>
                     </h2>
                     <h1><b>Lab Curriculum(Mixed List)</b></h1>
                     <h2><ol><li>Programming Labs</li></ol></
