--- a/exp 1.html
+++ b/exp 1.html
@@ -52,9 +52,9 @@
                 <li>Deep Learning</li></ol>
                 <ul><li>Data Science</li></ul>
                 <ol><li>Statics</li>
-                    <li>Data isualization</li></ol>
+                    <li>Data Visualization</li></ol>
                     </h2>
-                    <h1><b>Lab Curriculum(Mixed List)</b></h1>
+                    <h1><b>ab Curriculum(Mixed List)</b></h1>
                     <h2><ol><li>Programming Labs</li></ol></
                     <ul style="list-style-type:circle">
                         <li>C lab</li> 
