--- a/exp 1.html
+++ b/exp 1.html
@@ -54,7 +54,7 @@
                 <ol><li>Statics</li>
                     <li>Data Visualization</li></ol>
                     </h2>
-                    <h1><b>ab Curriculum(Mixed List)</b></h1>
+                    <h1><b>Lab Curriculum(Mixed List)</b></h1>
                     <h2><ol><li>Programming Labs</li></ol></
                     <ul style="list-style-type:circle">
                         <li>C lab</li> 
