--- a/exp 1.html
+++ b/exp 1.html
@@ -16,7 +16,7 @@
 <h2>
     <ol>
        <li> Mathematics-1 </li>
-       <li> Physics </li>
+       <li> Physic </li>
        <li> Basic Electrical Engineering </li>
        <li> Programming in C </li>
        <li> Engineering Drawing </li>
