--- a/exp 1.html
+++ b/exp 1.html
@@ -6,7 +6,7 @@
     <title>Experiment 1 </title>
 
 </head>
-<body><h1 style="color:black;text-align: center;">B.Tech Computer science-course Carriculum
+<body><h1 style="color:black;text-align: center;">M.Tech Computer science-course Carriculum
 </h1>
 <h2 style="color: black; text-align:center"><b>session:</b> 2025-29 &copy; ABES eng College Ghaziabad</h2>
 <hr>
