--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -15,7 +15,7 @@
             </div>
                 <h2 class="headings">Jeet Kumar</h2>
                 <p class="para">B.Tech-CSE</p>
-                <p class="para">Roll NO:21CS1007</p>
+                <p class="para">Rol NO:21CS1007</p>
                 <p class="para">1st Year</p>
             
         </div>
