--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -33,7 +33,7 @@
             <div class="shortn">
                 <h2>RK</h2></div>
                 <h2 class="headings">Rohit Kumar</h2>
-                <p class="para">B.Tech-CE</p>
+                <p class="para">B.Tech-ECE</p>
                 <p class="para">Roll NO:21EC1009</p>
                 <p class="para">1st year </p>
             
