--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -13,7 +13,7 @@
             <div class="shortn">
                 <h2>JK</h2>
             </div>
-                <h2 class="headings">eet Kumar</h2>
+                <h2 class="headings">Jeet Kumar</h2>
                 <p class="para">B.Tech-CSE</p>
                 <p class="para">Roll NO:21CS1007</p>
                 <p class="para">1st Year</p>
