--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -23,7 +23,7 @@
         
             <div class="shortn">
                 <h2>AR</h2></div>
-                <h2 class="headings">Asha Rani</h2>
+                <h2 class="headings">Ash Rani</h2>
                 <p class="para">B.Tech-IT</p>
                 <p class="para">Roll NO:21IT1012</p>
                 <p class="para">1st Year</p>
