--- a/CSS beg to adv/Experiment 8/Experiment-8.html
+++ b/CSS beg to adv/Experiment 8/Experiment-8.html
@@ -35,7 +35,7 @@
                 <h2 class="headings">Rohit Kumar</h2>
                 <p class="para">B.Tech-ECE</p>
                 <p class="para">Roll NO:21EC1009</p>
-                <p class="para">1st ear </p>
+                <p class="para">1st Year </p>
             
         </div>
 
