--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -31,7 +31,7 @@
         
         <div class="items">
             <img src="exp-9 img4.jpg" alt="Microwave img" id="oven">
-            <h2 class="heading">Apple iphone 15(128GB)-Green
+            <h2 class="heading">Appl iphone 15(128GB)-Green
             </h2>
             <p>Perfect for banking grilling, and quick heating with a large 28L capacity</p>
             <h2 class="heading1">₹799</h2>
