--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -33,7 +33,7 @@
             <img src="exp-9 img4.jpg" alt="Microwave img" id="oven">
             <h2 class="heading">Apple iphone 15(128GB)-Green
             </h2>
-            <p>Perfect fo banking grilling, and quick heating with a large 28L capacity</p>
+            <p>Perfect for banking grilling, and quick heating with a large 28L capacity</p>
             <h2 class="heading1">₹799</h2>
             <button class="button"> Buy Now</button>
         </div>
