--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -22,7 +22,7 @@
             </div>
             <div class="items">
             <img src="exp-9 img2.jpg" alt="mobile img">
-            <h2 class="heading">Apple iphone 7(128GB)-Green
+            <h2 class="heading">Apple iphone (128GB)-Green
             </h2>
             <p>Experience smooth performance,stunning photos, and an advanced A16 chip</p>
             <h2 class="heading1">₹1499</h2>
