--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -40,7 +40,7 @@
         
  <div class="items">
             <img src="exp-9 img1.jpg" alt="earbuds img">
-            <h2 class="heading">boAt Nirvana Zenith Pro (202522)
+            <h2 class="heading">boAt Nirvana Zenith Pro (2025221)
             </h2>
             <p>Premium wireless earbuds with clear sound and long-lasting battery life</p>
             <h2 class="heading1">₹1299</h2>
