--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -31,9 +31,9 @@
         
         <div class="items">
             <img src="exp-9 img4.jpg" alt="Microwave img" id="oven">
-            <h2 class="heading">LG 28
+            <h2 class="heading">LG 28 L Convection Microwave Oven
             </h2>
-            <p>Perfect for banking grilling, and quick heating with a large 28L capacity</p>
+            <p>Perfect for baking</p>
             <h2 class="heading1">₹799</h2>
             <button class="button"> Buy Now</button>
         </div>
