--- a/CSS beg to adv/Experiment 9/experiment-9.html
+++ b/CSS beg to adv/Experiment 9/experiment-9.html
@@ -39,12 +39,14 @@
         </div>
         
  <div class="items">
+    <a href="https://www.amazon.in/boAt-Nirvana-Zenith-Pro-Bluetooth/dp/B0DXNYJRMH/ref=sr_1_2_sspa?crid=1SWHZS00SUOJ5&dib=eyJ2IjoiMSJ9.13GbBA8sT1K8toiLhJgNu8nNVKVmm-xBYTLv-BwiBhkJ8JebOyibIvnYitm_LvsF0QNNJFk78gsSIvKs4S8bEQbKNBoLmZOW2X8yPqnPMTQ61YNzL2u7zZ9ovTlw-ptJs1FUE0IigIl6s9JXKWdJ5JiVUXZoAi2FvIiSqbz-rnXPNVT8s3-YdYUPMdtprybjXmaEQSSW08bpPy_LzZMwtI_rpyLgi8eqhwyUlvli10Q.99B8uR2SRLEMREhNhJjWNfA2QGqmK7g1SsP-flfle5Q&dib_tag=se&keywords=boAt%2BNirvana%2BZenith%2BPro%2B(2025&nsdOptOutParam=true&qid=1764392760&sprefix=boat%2Bnirvana%2Bzenith%2Bpro%2B2025%2Caps%2C2181&sr=8-2-spons&aref=gwNiqeGYyQ&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&th=1">
             <img src="exp-9 img1.jpg" alt="earbuds img">
             <h2 class="heading">boAt Nirvana Zenith Pro (2025)
             </h2>
             <p>Premium wireless earbuds with clear sound and long-lasting battery life</p>
             <h2 class="heading1">₹1299</h2>
             <button class="button"> Buy Now</button>
+            </a>
         </div>
 
 
