--- a/CSS beg to adv/Experiment 10/Experiment-10.html
+++ b/CSS beg to adv/Experiment 10/Experiment-10.html
@@ -4,13 +4,22 @@
     <link rel="stylesheet" href="exp-10.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E commerce navbar</title>
+    <title>E Commerce Navbar</title>
 </head>
 <body>
-    <div class="
-        <h1>Transformation</h1>
-        
-    </div>
+    <nav class="navbar">
+        <div class="logo">ShopEase</div>
+        <ul class="nav-links">
+         <li><a herf="#">Home</a></li>
+         <li><a herf="#">products</a></li>   
+        <li><a herf="#">Categories</a></li>
+         <li><a herf="#">Deals</a></li>
+        <li><a herf="#">Contact</a></li>   
     
+    <div class="actions">
+        <a herf="#">Cart</a>
+        <a herf="#">Login</a>
+    </div>
+    </nav>
 </body>
 </html>
