--- a/CSS beg to adv/Experiment 10/Experiment-10.html
+++ b/CSS beg to adv/Experiment 10/Experiment-10.html
@@ -15,11 +15,17 @@
         <li><a herf="#">Categories</a></li>
          <li><a herf="#">Deals</a></li>
         <li><a herf="#">Contact</a></li>   
+    </ul>
+    
     
     <div class="actions">
         <a herf="#">Cart</a>
         <a herf="#">Login</a>
     </div>
     </nav>
+    <section>
+        <h1>Welcome to Shopease !!</h1>
+        <p>Your one-stop shop for all your needs.</p>
+    </section>
 </body>
 </html>
