--- a/CSS beg to adv/Experiment 10/Experiment-10.html
+++ b/CSS beg to adv/Experiment 10/Experiment-10.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E Commerce Navbar</title>
 </head>
-<body>
+<body class="saini">
+    
     <nav class="navbar">
         <div class="logo">ShopEase</div>
         <ul class="nav-links">
